--- a/src/Photo.scss
+++ b/src/Photo.scss
@@ -31,6 +31,10 @@
     gap: $gutter-width;
     overflow-x: scroll;
 
+    & > a {
+      height: 100%;
+    }
+
     &__image {
       opacity: 0.5;
       height: 100%;
